{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 22,
  "lineage": "74807fe0-34d0-0a89-93db-c8508cab0436",
  "resources": [
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web_server_lb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "name": "web-server-us2w-lb-frontend-ip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-us2w/providers/Microsoft.Network/publicIPAddresses/web-server-us2w-public-ip"
              }
            ],
            "id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb",
            "location": "westus2",
            "name": "web-server-us2w-lb",
            "resource_group_name": "web-rg-us2w",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_public_ip.web_server_lb_public_ip",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_eu1w",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web_server_lb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "name": "web-server-eu1w-lb-frontend-ip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/publicIPAddresses/web-server-eu1w-public-ip"
              }
            ],
            "id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/loadBalancers/web-server-eu1w-lb",
            "location": "westeurope",
            "name": "web-server-eu1w-lb",
            "resource_group_name": "web-rg-eu1w",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_public_ip.web_server_lb_public_ip",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "web_server_lb_backend_pool",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb/backendAddressPools/web-server-us2w-lb-backend-pool",
            "loadbalancer_id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb",
            "name": "web-server-us2w-lb-backend-pool",
            "resource_group_name": "web-rg-us2w"
          },
          "depends_on": [
            "azurerm_lb.web_server_lb",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_eu1w",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "web_server_lb_backend_pool",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/loadBalancers/web-server-eu1w-lb/backendAddressPools/web-server-eu1w-lb-backend-pool",
            "loadbalancer_id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/loadBalancers/web-server-eu1w-lb",
            "name": "web-server-eu1w-lb-backend-pool",
            "resource_group_name": "web-rg-eu1w"
          },
          "depends_on": [
            "azurerm_lb.web_server_lb",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "web_server_lb_http_probe",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb/probes/web-server-us2w-lb-http-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb",
            "name": "web-server-us2w-lb-http-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp",
            "resource_group_name": "web-rg-us2w"
          },
          "depends_on": [
            "azurerm_lb.web_server_lb",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_eu1w",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "web_server_lb_http_probe",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/loadBalancers/web-server-eu1w-lb/probes/web-server-eu1w-lb-http-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/loadBalancers/web-server-eu1w-lb",
            "name": "web-server-eu1w-lb-http-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp",
            "resource_group_name": "web-rg-eu1w"
          },
          "depends_on": [
            "azurerm_lb.web_server_lb",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "web_server_lb_http_rule",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb/backendAddressPools/web-server-us2w-lb-backend-pool",
            "backend_port": 80,
            "enable_floating_ip": false,
            "frontend_ip_configuration_id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb/frontendIPConfigurations/web-server-us2w-lb-frontend-ip",
            "frontend_ip_configuration_name": "web-server-us2w-lb-frontend-ip",
            "frontend_port": 80,
            "id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb/loadBalancingRules/web-server-us2w-lb-http-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb",
            "name": "web-server-us2w-lb-http-rule",
            "probe_id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb/probes/web-server-us2w-lb-http-probe",
            "protocol": "Tcp",
            "resource_group_name": "web-rg-us2w"
          },
          "depends_on": [
            "azurerm_lb.web_server_lb",
            "azurerm_lb_backend_address_pool.web_server_lb_backend_pool",
            "azurerm_lb_probe.web_server_lb_http_probe",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_eu1w",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "web_server_lb_http_rule",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/loadBalancers/web-server-eu1w-lb/backendAddressPools/web-server-eu1w-lb-backend-pool",
            "backend_port": 80,
            "enable_floating_ip": false,
            "frontend_ip_configuration_id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/loadBalancers/web-server-eu1w-lb/frontendIPConfigurations/web-server-eu1w-lb-frontend-ip",
            "frontend_ip_configuration_name": "web-server-eu1w-lb-frontend-ip",
            "frontend_port": 80,
            "id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/loadBalancers/web-server-eu1w-lb/loadBalancingRules/web-server-eu1w-lb-http-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/loadBalancers/web-server-eu1w-lb",
            "name": "web-server-eu1w-lb-http-rule",
            "probe_id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/loadBalancers/web-server-eu1w-lb/probes/web-server-eu1w-lb-http-probe",
            "protocol": "Tcp",
            "resource_group_name": "web-rg-eu1w"
          },
          "depends_on": [
            "azurerm_lb.web_server_lb",
            "azurerm_lb_backend_address_pool.web_server_lb_backend_pool",
            "azurerm_lb_probe.web_server_lb_http_probe",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_server_nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-us2w/providers/Microsoft.Network/networkSecurityGroups/web-server-us2w-nsg",
            "location": "westus2",
            "name": "web-server-us2w-nsg",
            "resource_group_name": "web-rg-us2w",
            "security_rule": [],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_eu1w",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_server_nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/networkSecurityGroups/web-server-eu1w-nsg",
            "location": "westeurope",
            "name": "web-server-eu1w-nsg",
            "resource_group_name": "web-rg-eu1w",
            "security_rule": [],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_server_nsg_rule_http",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-us2w/providers/Microsoft.Network/networkSecurityGroups/web-server-us2w-nsg/securityRules/HTTP Inbound",
            "name": "HTTP Inbound",
            "network_security_group_name": "web-server-us2w-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "web-rg-us2w",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.web_server_nsg",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_eu1w",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_server_nsg_rule_http",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/networkSecurityGroups/web-server-eu1w-nsg/securityRules/HTTP Inbound",
            "name": "HTTP Inbound",
            "network_security_group_name": "web-server-eu1w-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "web-rg-eu1w",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.web_server_nsg",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_server_lb_public_ip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "learning-tf-web1",
            "fqdn": "learning-tf-web1.westus2.cloudapp.azure.com",
            "id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-us2w/providers/Microsoft.Network/publicIPAddresses/web-server-us2w-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.229.24.135",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "web-server-us2w-public-ip",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "web-rg-us2w",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_eu1w",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_server_lb_public_ip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "learning-tf-web1",
            "fqdn": "learning-tf-web1.westeurope.cloudapp.azure.com",
            "id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/publicIPAddresses/web-server-eu1w-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.91.204.41",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "web-server-eu1w-public-ip",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "web-rg-eu1w",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_server_subnet",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "1.0.1.0/24",
            "id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-us2w/providers/Microsoft.Network/virtualNetworks/web-server-us2w-vnet/subnets/web-server-us2w-1.0.1.0-subnet",
            "name": "web-server-us2w-1.0.1.0-subnet",
            "network_security_group_id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-us2w/providers/Microsoft.Network/networkSecurityGroups/web-server-us2w-nsg",
            "resource_group_name": "web-rg-us2w",
            "virtual_network_name": "web-server-us2w-vnet"
          },
          "depends_on": [
            "azurerm_network_security_group.web_server_nsg",
            "azurerm_resource_group.web_server_rg",
            "azurerm_virtual_network.web_server_vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "1.0.2.0/24",
            "id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-us2w/providers/Microsoft.Network/virtualNetworks/web-server-us2w-vnet/subnets/web-server-us2w-1.0.2.0-subnet",
            "name": "web-server-us2w-1.0.2.0-subnet",
            "resource_group_name": "web-rg-us2w",
            "virtual_network_name": "web-server-us2w-vnet"
          },
          "depends_on": [
            "azurerm_network_security_group.web_server_nsg",
            "azurerm_resource_group.web_server_rg",
            "azurerm_virtual_network.web_server_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.location_eu1w",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_server_subnet",
      "each": "list",
      "provider": "provider.azurerm"
    },
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "web_server_vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "1.0.0.0/22"
            ],
            "id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-us2w/providers/Microsoft.Network/virtualNetworks/web-server-us2w-vnet",
            "location": "westus2",
            "name": "web-server-us2w-vnet",
            "resource_group_name": "web-rg-us2w"
          },
          "depends_on": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_eu1w",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "web_server_vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "2.0.0.0/22"
            ],
            "id": "/subscriptions/1448c1a9-e564-4ec0-9364-5349bcf6904d/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/virtualNetworks/web-server-eu1w-vnet",
            "location": "westeurope",
            "name": "web-server-eu1w-vnet",
            "resource_group_name": "web-rg-eu1w"
          },
          "depends_on": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    }
  ]
}